fix: switch from height to bottom css rule to define height of component so that copryright will not be hidden on mobile

--- a/src/style/components/_mobile-menu.scss
+++ b/src/style/components/_mobile-menu.scss
@@ -7,7 +7,7 @@
   position: fixed;
   top: 0;
   left: -100vw;
-  height: 100vh;
+  bottom: 0;
   width: 100vw;
 
   background-color: $darkColor;
